# bounty-icp

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci-backend.yml  offchain-deploy.yml  offchain-linting.yml  offchain-release.yml  offchain-test.yml  provision-darwin.sh  provision-linux.sh
backend/: Cargo.toml  backend.did
backend/src/: lib.rs
backend/src/bounty/api/: accept.rs  claim.rs  decline.rs  deposit.rs  icrc1.rs  init.rs  register_issue.rs  state.rs  unregister_issue.rs
backend/src/bounty/cmd/: bounty.rs  db.rs  model.rs
backend/src/bounty/cmd/bounty/: api.rs  fixture.rs
backend/src/github/: client.rs  get_issue.rs  utils.rs
backend/src/github/api/: get_is_merged.rs  get_issue.rs  get_merged_details.rs
backend/src/provider/github/: client.rs  utils.rs
backend/src/provider/github/api/: get_fixed_by.rs  get_is_merged.rs  get_issue.rs  get_merged_details.rs  get_user_exists.rs
backend/src/users/api/: register_user.rs  upsert_user_wallet.rs
bounty/: Cargo.toml  bounty.did
bounty/src/: lib.rs
docs/: bounty-service.md  create-bounty.md
github/: Cargo.toml
github/src/: lib.rs  utils.rs
make/: install_backend.sh  install_bounty.sh  install_ledger.sh  install_ledger_index.sh
make/test/: deposit.sh  deposit2.sh  deposit_direct.sh
offchain/github/: README.md  package.json
provider/github/: Cargo.toml  github.did
scripts/: test-workspaces.sh
src/bounty-icp-backend/: Cargo.toml
src/bounty-icp-frontend/: package.json
(+22 files in other folders)
