[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.4"
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
ic-ledger-types="0.10.0"
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
serde_bytes = "0.11.14"
num-bigint = "0.4.4"
num-traits = "0.2.18"
futures = "0.3.30"
async-trait = "0.1.8"
regex = "1.5.4"
derive_builder = "0.20.0"
